[package]
name = "rpgbe"
version = "0.1.0"
authors = ["Pat Laster <palaster307@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
psp2-sys = { git = "https://github.com/rust-on-vita/psp2-sys" }
vitallocator = { git = "https://github.com/rust-on-vita/vitallocator" }

[profile.release]
lto = true
panic = 'abort'