[package]
name = "rpgbe"
version = "0.1.0"
authors = ["Pat Laster <palaster307@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.2"

[profile.release]
panic = 'unwind'
lto = true
opt-level = 3

[package.metadata.vita]
title_id = "RPGBE0001"
title_name = "RPGBE"
assets = "./static"
